--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/css/bootstrap-material-design.min.css" integrity="sha384-R80DC0KVBO4GSTw+wZ5x2zn2pu4POSErBkf8/fSFhPXHxvHJydT0CSgAP2Yo2r4I" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Kenneth C. Ramos</title>
+    <title>Lorem Ipsum</title>
   </head>
 
   <body>
     <!--Content starts here-->
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary nav-padding">
-      <a class="navbar-brand" href="#">Suyash Mahar</a>
+      <a class="navbar-brand" href="#">Lorem Ipsum</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
       </button>
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 	<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 	  <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
 	  </li>
 	  <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
@@ -32,34 +32,58 @@
     </nav>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-	<h1 class="display-3">About me</h1>
-	<p class="lead">I'm a second year undergraduate in electronics and communication engineering at <a href="http://iitr.ac.in" class="alert-link font-normal">IIT Roorkee</a> with interest in <a href="https://en.wikipedia.org/wiki/Heterogeneous_computing" class="alert-link font-normal">heterogeneous computing</a> and FPGA based accelerators. My resume is available <a href="#" class="alert-link font-normal">here</a>.</p>
+	<h1 class="display-3">Nullam rutrum</h1>
+	<p class="lead">
+	  Nulla posuere.  Nullam eu ante vel est convallis dignissim.
+	  Fusce suscipit, wisi nec facilisis facilisis, est dui
+	  fermentum leo, quis tempor ligula erat quis odio.  Nunc
+	  porta vulputate tellus.  Nunc rutrum turpis sed pede.  Sed
+	  bibendum.  Aliquam posuere.  Nunc aliquet, augue nec
+	  adipiscing interdum, lacus tellus malesuada massa, quis
+	  varius mi purus non odio.  Pellentesque condimentum, magna
+	  ut suscipit hendrerit, ipsum augue ornare nulla, non luctus
+	  diam neque sit amet urna.  Curabitur vulputate vestibulum
+	  lorem.
+	</p>
       </div>
     </div>
     <div class="row content-panel"> 
       <div class="col-md-8">
 	
 	<p/> 
-	<h1 class="bd-title" id="content">Projects</h1>
-	<p/>
-	I have worked in past on FPGA based FIB lookups in Named Data Networks, which included search and implementation of efficient data-structure. Apart from these I have hosted a few hobby projects at my GitHub profile. 
+	<h1 class="bd-title" id="content">Projects</h1> <p/>
+	Nullam eu
+	ante vel est convallis dignissim.  Fusce suscipit, wisi nec
+	facilisis facilisis, est dui fermentum leo, quis tempor ligula
+	erat quis odio.  Nunc porta vulputate tellus.  Nunc rutrum
+	turpis sed pede.  Sed bibendum.  Aliquam posuere.  Nunc
+	aliquet, augue nec adipiscing interdum, lacus tellus malesuada
+	massa, quis varius mi purus non odio.  Pellentesque
+	condimentum, magna ut suscipit hendrerit, ipsum augue ornare
+	nulla, non luctus diam neque sit amet urna.
+
+
 	<div id="accordion" role="tablist">
 	  <div class="card">
 	    <div class="card-header" role="tab" id="headingOne">
 	      <h5 class="mb-0">
 		<a data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-		  Trianglify
+		  Suspendisse potenti
 		</a>
 	      </h5>
 	    </div>
 
 	    <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 	      <div class="card-body">
-		<img src="https://raw.githubusercontent.com/sdsmdg/trianglify/develop/resources/splash.png" style="width:100%;height:auto;">
-		Trianglify is an Android library that helps creates views with beautiful patterns. Trianglify is based on MVP architecture and licensed under MIT license.
-		<p/>
-		<a href="http://bit.ly/trianglifyDemo" class="card-link" target="_blank">GooglePlay Demo</a>
-		<a href="https://github.com/sdsmdg/trianglify" class="card-link"  target="_blank">GitHub</a>
+		Lorem ipsum dolor sit amet, consectetuer adipiscing
+		elit.  Donec hendrerit tempor tellus.  Donec pretium
+		posuere tellus.  Proin quam nisl, tincidunt et, mattis
+		eget, convallis nec, purus.  Cum sociis natoque
+		penatibus et magnis dis parturient montes, nascetur
+		ridiculus mus.  Nulla posuere.  Donec vitae dolor.
+		Nullam tristique diam non turpis.  Cras placerat
+		accumsan nulla.  Nullam rutrum.  Nam vestibulum
+		accumsan nisl.
 	      </div>
 	    </div>
 	  </div>
@@ -67,13 +91,24 @@
 	    <div class="card-header" role="tab" id="headingTwo">
 	      <h5 class="mb-0">
 		<a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-		  Pine
+		  Cras placerat accumsan nulla
 		</a>
 	      </h5>
 	    </div>
 	    <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
 	      <div class="card-body">
-		Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+		Anim pariatur cliche reprehenderit, enim eiusmod high
+		life accusamus terry richardson ad squid. 3 wolf moon
+		officia aute, non cupidatat skateboard dolor
+		brunch. Food truck quinoa nesciunt laborum
+		eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+		bird on it squid single-origin coffee nulla assumenda
+		shoreditch et. Nihil anim keffiyeh helvetica, craft
+		beer labore wes anderson cred nesciunt sapiente ea
+		proident. Ad vegan excepteur butcher vice
+		lomo. Leggings occaecat craft beer farm-to-table, raw
+		denim aesthetic synth nesciunt you probably haven't
+		heard of them accusamus labore sustainable VHS.
 	      </div>
 	    </div>
 	  </div>
@@ -81,13 +116,24 @@
 	    <div class="card-header" role="tab" id="headingThree">
 	      <h5 class="mb-0">
 		<a class="collapsed" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-		  RISC processor
+		  Nullam eu ante vel 
 		</a>
 	      </h5>
 	    </div>
 	    <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
 	      <div class="card-body">
-		Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+		Anim pariatur cliche reprehenderit, enim eiusmod high
+		life accusamus terry richardson ad squid. 3 wolf moon
+		officia aute, non cupidatat skateboard dolor
+		brunch. Food truck quinoa nesciunt laborum
+		eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+		bird on it squid single-origin coffee nulla assumenda
+		shoreditch et. Nihil anim keffiyeh helvetica, craft
+		beer labore wes anderson cred nesciunt sapiente ea
+		proident. Ad vegan excepteur butcher vice
+		lomo. Leggings occaecat craft beer farm-to-table, raw
+		denim aesthetic synth nesciunt you probably haven't
+		heard of them accusamus labore sustainable VHS.
 	      </div>
 	    </div>
 	  </div>
