1. Add pages on exp., people and teaching and publications. 2. Fix overflow in index.html content pane.

--- a/people.html
+++ b/people.html
@@ -21,69 +21,52 @@
 	<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 	  
 	  <li class="nav-item">
-            <a class="nav-link" href="#">|</span></a>
+            <a class="nav-link" href="#">|</a>
 	  </li>
-	  
+
 	  <li class="nav-item active">
-            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-	  </li>
-	  <li class="nav-item active">
-            <a class="nav-link" href="./experiences.html">Experiences</a>
+	    <a class="nav-link" href="./index.html">Home</a>
 	  </li>
 	  <li class="nav-item active">
-            <a class="nav-link" href="./teaching_and_publications.html">Teaching & Publications</a>
+	    <a class="nav-link" href="./experiences.html">Experiences</a>
 	  </li>
 	  <li class="nav-item active">
-            <a class="nav-link" href="./people.html">People</a>
+	    <a class="nav-link" href="./teaching_and_publications.html">Teaching & Publications</a>
 	  </li>
 	  <li class="nav-item active">
-            <a class="nav-link" href="./people.html">People</a>
+	    <a class="nav-link" href="./people.html">People<span class="sr-only">(current)</span></a>
+	  </li>
+	  <li class="nav-item active">
+	    <a class="nav-link" href="./people.html">People</a>
 	  </li>
 	</ul>
       </div>
     </nav>
 
     <!-- Define box containing owner's introduction and image -->
-    <div class="info-box">
-      <h1 class="bd-title">About Me</h1>
 
-      <div class="row">
-	<div class="col-md-9">
-	  <!-- Owner's description starts here -->
-	  <p class="info-box-text">
-	    Bishnu Prasad Das obtained the Ph.D. degree in
-	    electronics design and technology from Indian Institute
-	    of Science (IISc), Bangalore, India, in 2009. He was
-	    with Texas Instruments, Bangalore, India, under Texas
-	    Instruments University Program during his Ph.D. He is
-	    currently an assistant professor in the Department of
-	    Electronics and Communication Engineering, IIT,
-	    Roorkee. During July 2012 to Dec 2013, he worked as a
-	    Post-Doctoral Researcher with the Department of
-	    Electrical and Computer Engineering, Carnegie Mellon
-	    University, Pittsburgh, USA, in the project entitled
-	    Trusted Integrated Circuit Design. During 2009 to 2012,
-	    he worked as a Post-Doctoral Researcher with Kyoto
-	    University, Kyoto, Japan, in the project entitled
-	    Dependable VLSI platform using robust fabrics. His
-	    current research interests include resilient circuit
-	    design, on-chip process variability measurement, design
-	    of sub-threshold, variation tolerant standard cell
-	    library and hardware security
-	  </p>
-	  <!-- Owner's description ends here -->
-	</div>
-	<div class="col-md-3">
-	  <!-- Owner's image here -->
-	  <img src="./pic.png" alt="author_image" class="img-thumbnail info-box-img">
-	  <!-- Owner's image ends here -->
-	</div>
-      </div>
-    </div>
-    
-    <div class="row content-panel"> 
-      <div class="col-md-8">	
-	<h1 class="bd-title" id="content">Recent Publications</h1> <p/>
+    <div class="tabular-content-padding">
+      <br>
+      <h1 class="bd-title">People</h1>
+      <br>
+      
+      <div class="content-panel">
+	<h2 class="bd-title">Ph.D. Students</h2>
+	<ul>
+	   <li>Priyamvada Sharma</li>
+	   <li>Sannena Govinda</li>
+	   <li>Poorvi Jain</li>
+	   <li>Prasanna Kumar Saragada</li>
+	</ul>
+	<h2 class="bd-title">M.Tech. Students</h2>
+	<ul>
+	  <li>Rahul Sagar</li>
+	  <li>Bindu Madhavi Cherukupalli</li>
+	</ul>
+	<h2 class="bd-title">B.Tech. Students</h2>
+	<ul>
+	  <li></li>
+	</ul>
       </div>
     </div>
 
