Fix formatting and complete work

--- a/experiences.html
+++ b/experiences.html
@@ -19,11 +19,6 @@
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 	<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-	  
-	  <li class="nav-item">
-            <a class="nav-link" href="#">|</a>
-	  </li>
-
 	  <li class="nav-item active">
 	    <a class="nav-link" href="./index.html">Home</a>
 	  </li>
@@ -36,11 +31,10 @@
 	  <li class="nav-item active">
 	    <a class="nav-link" href="./people.html">People</a>
 	  </li>
-	</ul>
-	<form class="form-inline my-2 my-lg-0">
-	  <a class="nav-link" href="./contact.html"><font color="white">Contact</font></a>
-	</form>
-	
+	  <li class="nav-item active">
+	    <a class="nav-link" href="./contact.html">Contact</a>
+	  </li>
+	</ul>	
       </div>
     </nav>
 
@@ -109,7 +103,7 @@
       <center>
 	<p/>
 	<hr id="footerHorzRule">
-	<p class="gray-fg">© 2018 Suyash Mahar<p/>
+	  <p class="gray-fg">© 2018 Dr. Bishnu Prasad Das<p/>
 	<p/>
       </center>
     </footer>
