--- a/teaching_and_publications.html
+++ b/teaching_and_publications.html
@@ -19,11 +19,6 @@
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 	<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-	  
-	  <li class="nav-item">
-            <a class="nav-link" href="#">|</a>
-	  </li>
-
 	  <li class="nav-item active">
 	    <a class="nav-link" href="./index.html">Home</a>
 	  </li>
@@ -37,7 +32,7 @@
 	    <a class="nav-link" href="./people.html">People</a>
 	  </li>
 	  <li class="nav-item active">
-	    <a class="nav-link" href="./people.html">People</a>
+	    <a class="nav-link" href="./contact.html">Contact</a>
 	  </li>
 	</ul>
       </div>
@@ -48,7 +43,7 @@
     
     <div class="tabular-content-padding">
       <br>
-      <h1 class="bd-title">Teaching</h1>
+      <h2 class="bd-title">Teaching</h2>
       <br>
       <div class="content-panel">
 	<table class="table table-sm table-striped">
@@ -107,9 +102,9 @@
       <div class="content-panel">
 	<ul>
 	  <h3>Patents</h3>
-		
+	  
 	  <li>P1. Bharadwaj Amrutur and <b>Bishnu Prasad Das</b>, "Gate Delay Measurement Circuit and Method of Determining a Delay of a Logic Gate" US patent No. 8,224,604 B1 and date of Patent July 17, 2012. </li>
-	  <li>P2. Lawrence Pileggi, Bishnu P. Das, Kaushik Vaidyanathan, "Testing integrated circuits during split fabrication," Application No: PCT/US2015/012220, Publication no: WO2015160405 A3, Publication date, Dec 10, 2015.</li>
+	  <li>P2. Lawrence Pileggi, <b>Bishnu P. Das</b>, Kaushik Vaidyanathan, "Testing integrated circuits during split fabrication," Application No: PCT/US2015/012220, Publication no: WO2015160405 A3, Publication date, Dec 10, 2015.</li>
 
 	  <br>
 
@@ -146,7 +141,7 @@
 	<center>
 	  <p/>
 	  <hr id="footerHorzRule">
-	  <p class="gray-fg">© 2018 Suyash Mahar<p/>
+	  <p class="gray-fg">(c) 2018 Dr. Bishnu Prasad Das<p/>
 	  <p/>
 	</center>
       </footer>
