--- a/index.html
+++ b/index.html
@@ -19,25 +19,20 @@
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 	<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-	  
-	  <li class="nav-item">
-            <a class="nav-link" href="#">|</span></a>
-	  </li>
-	  
 	  <li class="nav-item active">
-            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+	    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
 	  </li>
 	  <li class="nav-item active">
-            <a class="nav-link" href="./experiences.html">Experiences</a>
+	    <a class="nav-link" href="./experiences.html">Experiences</a>
 	  </li>
 	  <li class="nav-item active">
-            <a class="nav-link" href="./teaching_and_publications.html">Teaching & Publications</a>
+	    <a class="nav-link" href="./teaching_and_publications.html">Teaching & Publications</a>
 	  </li>
 	  <li class="nav-item active">
-            <a class="nav-link" href="./people.html">People</a>
+	    <a class="nav-link" href="./people.html">People</a>
 	  </li>
 	  <li class="nav-item active">
-            <a class="nav-link" href="./people.html">People</a>
+	    <a class="nav-link" href="./contact.html">Contact</a>
 	  </li>
 	</ul>
       </div>
@@ -75,12 +70,12 @@
 	</div>
 	<div class="col-md-3">
 	  <!-- Owner's image here -->
-	  <img src="./pic.png" alt="author_image" class="img-thumbnail info-box-img">
+	  <img src="./resources/bpdasfec_4AM40Dz.jpg" alt="author_image" class="img-thumbnail info-box-img">
 	  <!-- Owner's image ends here -->
 	</div>
       </div>
     </div>
-    
+
     <div class="row content-panel"> 
       <div class="col-md-8">	
 	<h1 class="bd-title" id="content">Recent Publications</h1> <p/>
@@ -92,7 +87,7 @@
       <center>
 	<p/>
 	<hr id="footerHorzRule">
-	<p class="gray-fg">© 2018 Suyash Mahar<p/>
+	  <p class="gray-fg">© 2018 Dr. Bishnu Prasad Das<p/>
 	<p/>
       </center>
     </footer>
