Fix copyright symbol

--- a/people.html
+++ b/people.html
@@ -68,7 +68,7 @@
       <center>
 	<p/>
 	<hr id="footerHorzRule">
-	  <p class="gray-fg">© 2018 Dr. Bishnu Prasad Das<p/>
+	  <p class="gray-fg">&#169; 2018 Dr. Bishnu Prasad Das<p/>
 	<p/>
       </center>
     </footer>
