--- a/index.html
+++ b/index.html
@@ -7,102 +7,113 @@
     <title>Dr. Bishnu Prasad Das</title>
   </head>
 
-  <body>
+  <body data-gr-c-s-loaded="true">
     <!--Content starts here-->
-
     <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary nav-padding">
-      <a class="navbar-brand" href="#">Dr. Bishnu Prasad Das</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-	<span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-	<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-	  <li class="nav-item active">
-	    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-	  </li>
-	  <li class="nav-item active">
-	    <a class="nav-link" href="./experiences.html">Experiences</a>
-	  </li>
-	  <li class="nav-item active">
-	    <a class="nav-link" href="./teaching_and_publications.html">Teaching & Publications</a>
-	  </li>
-	  <li class="nav-item active">
-	    <a class="nav-link" href="./people.html">People</a>
-	  </li>
-	  <li class="nav-item active">
-	    <a class="nav-link" href="./contact.html">Contact</a>
-	  </li>
-	</ul>
-      </div>
-    </nav>
-
-    <!-- Define box containing owner's introduction and image -->
-    <div class="info-box">
-      <h1 class="bd-title">About Me</h1>
-
+    <div class="container-fluid">
       <div class="row">
-	<div class="col-md-8">
-	  <!-- Owner's description starts here -->
-	  <p class="info-box-text">
-	    <p id="defaultDescriptionText">
-	    Bishnu Prasad Das obtained the Ph.D. degree in
-	    electronics design and technology from Indian Institute
-	    of Science (IISc), Bangalore, India, in 2009. He was
-	    with Texas Instruments, Bangalore, India, under Texas
-	    Instruments University Program during his Ph.D. He is
-	    currently an assistant professor in the Department of
-	    Electronics and Communication Engineering, IIT,
-	    Roorkee.
-	    </p>
-	    <!-- Controls for showing/hiding content -->
-	    <input id="textAreaToggle" type="checkbox" />
-	    <p id="textarea">
-	    During July 2012 to Dec 2013, he worked as a
-	    Post-Doctoral Researcher with the Department of
-	    Electrical and Computer Engineering, Carnegie Mellon
-	    University, Pittsburgh, USA, in the project entitled
-	    Trusted Integrated Circuit Design. During 2009 to 2012,
-	    he worked as a Post-Doctoral Researcher with Kyoto
-	    University, Kyoto, Japan, in the project entitled
-	    Dependable VLSI platform using robust fabrics. His
-	    current research interests include resilient circuit
-	    design, on-chip process variability measurement, design
-	    of sub-threshold, variation tolerant standard cell
-	    library and hardware security
-	    </p>
-	    <label for="textAreaToggle" class="btn btn-link text-primary"></label>
-	  </p>
-	  <!-- Owner's description ends here -->
-	</div>
-	<div class="col-md-4">
-	  <!-- Owner's image here -->
-	  <img src="./resources/bpdasfec_4AM40Dz.jpg" alt="author_image" class="img-thumbnail info-box-img">
-	  <!-- Owner's image ends here -->
-	</div>
+	<nav class="col-md-2 d-none d-md-block bg-light sidebar pt-3 top-margin-start">
+	  <div class="sidebar-sticky">
+	    <ul class="nav flex-column">
+	      <li class="nav-item">
+                <a class="nav-link active" href="#">
+                  <b>Home</b> <span class="sr-only">(current)</span>
+                </a>
+	      </li>
+	      <li class="nav-item">
+                <a class="nav-link active" href="./experiences.html">
+                  Experiences <span class="sr-only"></span>
+                </a>
+	      </li>
+	      <li class="nav-item">
+                <a class="nav-link active" href="./teaching_and_publications.html">
+                  Teaching and Publication <span class="sr-only"></span>
+                </a>
+	      </li>
+	      <li class="nav-item">
+                <a class="nav-link active" href="./people.html">
+                  People <span class="sr-only"></span>
+                </a>
+	      </li>
+	      <li class="nav-item">
+                <a class="nav-link active" href="./contact.html">
+                  Contact <span class="sr-only"></span>
+                </a>
+	      </li>
+
+	    </ul>
+	  </div>
+	</nav>
+
+	<main class="col-md-9 ml-sm-auto col-lg-10 px-4" role="main">
+	  <!-- Define box containing owner's introduction and image -->
+	  <div class="info-box">
+	    <h1 class="bd-title">About Me</h1>
+	    
+	    <div class="row">
+	      <div class="col-md-8">
+		<!-- Owner's description starts here -->
+		<p class="info-box-text">
+		<p id="defaultDescriptionText">
+		  Bishnu Prasad Das obtained the Ph.D. degree in
+		  electronics design and technology from Indian Institute
+		  of Science (IISc), Bangalore, India, in 2009. He was
+		  with Texas Instruments, Bangalore, India, under Texas
+		  Instruments University Program during his Ph.D. He is
+		  currently an assistant professor in the Department of
+		  Electronics and Communication Engineering, IIT,
+		  Roorkee.
+		</p>
+		<!-- Controls for showing/hiding content -->
+		<input id="textAreaToggle" type="checkbox" />
+		<p id="textarea">
+		  During July 2012 to Dec 2013, he worked as a
+		  Post-Doctoral Researcher with the Department of
+		  Electrical and Computer Engineering, Carnegie Mellon
+		  University, Pittsburgh, USA, in the project entitled
+		  Trusted Integrated Circuit Design. During 2009 to 2012,
+		  he worked as a Post-Doctoral Researcher with Kyoto
+		  University, Kyoto, Japan, in the project entitled
+		  Dependable VLSI platform using robust fabrics. His
+		  current research interests include resilient circuit
+		  design, on-chip process variability measurement, design
+		  of sub-threshold, variation tolerant standard cell
+		  library and hardware security
+		</p>
+		<label for="textAreaToggle" class="btn btn-link text-primary"></label>
+		</p>
+		<!-- Owner's description ends here -->
+	      </div>
+	      <div class="col-md-4">
+		<!-- Owner's image here -->
+		<img src="./resources/bpdasfec_4AM40Dz.jpg" alt="author_image" class="img-thumbnail info-box-img">
+		<!-- Owner's image ends here -->
+	      </div>
+	    </div>
+	  </div>
+	  
+	  <div class="row content-panel"> 
+	    <div class="col-md-8">	
+	      <h1 class="bd-title" id="content">Recent Publications</h1> <p/>
+	    </div>
+	  </div>
+	  
+	  <!-- Copyright information on footer -->
+	  <footer class="footer">
+	    <center>
+	      <p/>
+	      <hr id="footerHorzRule">
+	      <p class="gray-fg">&#169; 2018 Dr. Bishnu Prasad Das<p/>
+	      <p/>
+	    </center>
+	  </footer>
+	</main>
       </div>
     </div>
-
-    <div class="row content-panel"> 
-      <div class="col-md-8">	
-	<h1 class="bd-title" id="content">Recent Publications</h1> <p/>
-      </div>
-    </div>
-
-    <!-- Copyright information on footer -->
-    <footer class="footer">
-      <center>
-	<p/>
-	<hr id="footerHorzRule">
-	  <p class="gray-fg">&#169; 2018 Dr. Bishnu Prasad Das<p/>
-	<p/>
-      </center>
-    </footer>
-
     <!-- Scripts for animations -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/js/bootstrap-material-design.js" integrity="sha384-3xciOSDAlaXneEmyOo0ME/2grfpqzhhTcM4cE32Ce9+8DW/04AGoTACzQpphYGYe" crossorigin="anonymous"></script>
     <script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
   </body>
+  
