--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                   Contact <span class="sr-only"></span>
                 </a>
 	      </li>
-
 	    </ul>
 	  </div>
 	</nav>
@@ -91,11 +90,59 @@
 	      </div>
 	    </div>
 	  </div>
+
 	  
+	  <!-- Heading -->
 	  <div class="row content-panel"> 
 	    <div class="col-md-8">	
 	      <h1 class="bd-title" id="content">Recent Publications</h1> <p/>
 	    </div>
+	  </div>
+	  <ul style="margin-right: 5ch; margin-left: 20ch;">
+	    <li>J5. <b>Bishnu Prasad Das</b> and Hidetoshi Onodera, "Frequency-Independent Warning Detection Sequential for Dynamic Voltage and Frequency Scaling in ASICs," IEEE Transactions on Very Large Scale Integration Systems. (Accepted)</li>
+	    <li>J4. <b>Bishnu Prasad Das</b> and Hidetoshi Onodera, "On-chip Measurement of Rise/Fall Gate Delay Using Reconfigurable Ring Oscillator,"  IEEE Transactions on Circuits and Systems II, Vol. 61, No. 3, Mar 2014, pp. 183-187.</li>
+	    <li>J3. <b>Bishnu Prasad Das</b> and Hidetoshi Onodera, "Area-Efficient Reconfigurable-Array-Based Oscillator for Standard Cell Characterization," IET Circuits Devices Syst., Vol. 6, Iss. 6, pp. 429–436, Nov. 2012.</li>
+	  </ul>
+
+	  <br><br>
+	  <!-- Heading -->
+	  <div class="row content-panel"> 
+	    <div class="col-md-8">	
+	      <h1 class="bd-title" id="content">Highlights</h1> <p/>
+	    </div>
+	  </div>
+
+	  <!-- Carousel effect -->
+	  <div id="carouselExampleIndicators" class="carousel slide margin-left-right" data-ride="carousel">
+	    <ol class="carousel-indicators">
+	      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+	      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+	      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+	    </ol>
+	    <div class="carousel-inner">
+	      <div class="carousel-item active">
+		<!-- replace with some actual image -->
+		<img class="d-block w-100" height="600ch" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Gray_contrast_test_image_%28wide_background%29.svg/500px-Gray_contrast_test_image_%28wide_background%29.svg.png" alt="First slide">
+		<div class="carousel-caption d-none d-md-block">
+		  <h5>Welcome to the website!</h5>
+		  <p>This is a sample text.</p>
+		</div>
+	      </div>
+	      <div class="carousel-item">
+		<img class="d-block w-100"  height="600ch" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Gray_contrast_test_image_%28wide_background%29.svg/500px-Gray_contrast_test_image_%28wide_background%29.svg.png" alt="Second slide">
+	      </div>
+	      <div class="carousel-item">
+		<img class="d-block w-100"  height="600ch" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Gray_contrast_test_image_%28wide_background%29.svg/500px-Gray_contrast_test_image_%28wide_background%29.svg.png" alt="Third slide">
+	      </div>
+	    </div>
+	    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+	      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	      <span class="sr-only">Previous</span>
+	    </a>
+	    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+	      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	      <span class="sr-only">Next</span>
+	    </a>
 	  </div>
 	  
 	  <!-- Copyright information on footer -->
@@ -116,4 +163,4 @@
     <script src="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/js/bootstrap-material-design.js" integrity="sha384-3xciOSDAlaXneEmyOo0ME/2grfpqzhhTcM4cE32Ce9+8DW/04AGoTACzQpphYGYe" crossorigin="anonymous"></script>
     <script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
   </body>
-  
+</html>  
