Finalize website with separation of teaching and publications section

--- a/experiences.html
+++ b/experiences.html
@@ -26,8 +26,13 @@
                 </a>
 	      </li>
 	      <li class="nav-item">
-                <a class="nav-link active" href="./teaching_and_publications.html">
-                  Teaching and Publication <span class="sr-only"></span>
+                <a class="nav-link active" href="./teaching.html">
+                  Teaching<span class="sr-only"></span>
+                </a>
+	      </li>
+	      <li class="nav-item">
+                <a class="nav-link active" href="./publications.html">
+                  Publications<span class="sr-only"></span>
                 </a>
 	      </li>
 	      <li class="nav-item">
